--- a/fig/adaptive_dist.tex
+++ b/fig/adaptive_dist.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Adaptive_Dist}
   \caption[Variations of the distribution specification parameter for the
   \protect\pet compartmental model using adaptive \protect\smc algorithms]
