--- a/fig/cess_iter_mean.tex
+++ b/fig/cess_iter_mean.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/CESS_Iter_Mean}
   \caption[Relations between average number of distributions and
   \protect\cess]
