--- a/fig/cess_path_var.tex
+++ b/fig/cess_path_var.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/CESS_Path_Var}
   \caption[Relations between the variance of the path sampling estimator and
   \protect\cess]
