--- a/fig/fixed_proposal.tex
+++ b/fig/fixed_proposal.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Fixed_Proposal}
   \caption[Acceptance rates of non-adaptive \protect\smc algorithms]
   {Average random walk acceptance rates for the two-compartments \pet model
