--- a/fig/gmm_resample.tex
+++ b/fig/gmm_resample.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/GMM_Resample}
   \caption[Variance of standard standard estimator and path sampling using
   adaptive resampling]
