--- a/fig/particle_iter_var.tex
+++ b/fig/particle_iter_var.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Particle_Iter_Var}
   \caption[Variance of path sampling estimator and total number of samples
   using \protect\smc algorithm]
