--- a/fig/pet_mo.tex
+++ b/fig/pet_mo.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PET_MO}
   \caption[Model selection results for the \protect\pet compartmental model]
   {Model selection results for \pet model using real data set. From
