--- a/fig/pet_plasma.tex
+++ b/fig/pet_plasma.tex
@@ -1,4 +1,5 @@
 \begin{figure}[t]
+  \UseAltLinespread
   \centering
   \begin{tikzpicture}[scale=0.4]
     \draw (0,0) rectangle (2,20);
@@ -40,7 +41,7 @@
     \draw (8,16)  node {$C_{T_1}$};
     \draw (8,4)   node {$C_{T_i}$};
     \draw (20,16) node {$C_{T_j}$};
-    \draw (20,4)  node {$C_{T_n}$};
+    \draw (20,4)  node {$C_{T_r}$};
     \draw (3,17)  node {$K_1$};
     \draw (3,15)  node {$k_2$};
   \end{tikzpicture}
