--- a/fig/pet_plot.tex
+++ b/fig/pet_plot.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PETPlot-smc2-ps-bw}
   \caption[Volume of distribution of real \protect\pet compartmental model
   data]
