--- a/fig/typical_pet.tex
+++ b/fig/typical_pet.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Typical_PET}
   \caption{Typical real \protect\pet data}
   \label{fig:typical real pet}
