--- a/fig/vsmc_bench_smp.tex
+++ b/fig/vsmc_bench_smp.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/bench-smp-time-running}
   \includegraphics[width=\linewidth]{fig_src/bench-smp-speedup-running}
   \caption[Performance of \protect\vsmc \protect\smp implementations]
