--- a/tab/bayes-factor-scale.tex
+++ b/tab/bayes-factor-scale.tex
@@ -1,5 +1,5 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption{Jeffreys' intepretation of the Bayes factor}
   \label{tab:bayes factor log10 scale}
   \begin{tabu}{X[1l]X[1l]X[5l]}
