--- a/tab/gmm-pair.tex
+++ b/tab/gmm-pair.tex
@@ -1,7 +1,7 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption
-  [Gaussian mixture model Bayes factor estimates]
+  [Gaussian mixture model the Bayes factor estimates]
   {Gaussian mixture model the Bayes factor estimates obtained via \smc[2],
     \smc[3], \ais and the population \mcmc.}
   \label{tab:gmm-pair}
