--- a/tab/gmm-prob.tex
+++ b/tab/gmm-prob.tex
@@ -1,7 +1,7 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption
-  [Gaussian mixture model posterior model probability]
+  [Gaussian mixture model posterior model probability estimates]
   {Gaussian mixture model posterior model probability estimates obtained via
     \smc[1] and \rjmcmc.}
   \label{tab:gmm-prob}
