--- a/tab/node-c.tex
+++ b/tab/node-c.tex
@@ -1,7 +1,6 @@
-\thispagestyle{empty}
 \newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption
   [Nonlinear \protect\ode model marginal likelihood and the Bayes factor
   estimates (complex model data)]
