--- a/tab/pet-aic.tex
+++ b/tab/pet-aic.tex
@@ -1,10 +1,10 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption
-  [\protect\pet compartmental model selection using \protect\aicc]
-  {Frequencies of models selected by \aicc (\%) for the 2,000 \pet
-    compartmental model data sets simulated simulated from a
-    three-compartments model}
+  [Model selection results for the \protect\pet compartmental model using
+  the \protect\aicc strategy]
+  {Frequencies of models selected by \aicc (\%) for 2,000 \pet compartmental
+  model data sets simulated from the three-compartments model}
   \label{tab:pet aicc}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
