--- a/tab/pet-bias.tex
+++ b/tab/pet-bias.tex
@@ -1,7 +1,7 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
-  \caption{Path sampling estimates of marginal likelihood of two-compartments
-    \protect\pet model for the simulated data set.}
+  \UseAltLinespread
+  \caption{Path sampling marginal likelihood estimates of the two-compartments
+    \protect\pet model for a simulated data set.}
   \label{tab:pet-bias}
   \begin{tabularx}{\linewidth}{lXXXX}
     \toprule
