--- a/tab/pet-bic.tex
+++ b/tab/pet-bic.tex
@@ -1,10 +1,10 @@
-\begin{table}
-  \linespread{1.1}\selectfont
+\begin{table}[t]
+  \UseAltLinespread
   \caption
-  [\protect\pet compartmental model selection using \protect\bic]
-  {Frequencies of models selected by \bic (\%) for the 2,000 \pet
-    compartmental model data sets simulated simulated from a
-    three-compartments model}
+  [Model selection results for the \protect\pet compartmental model using
+  the \protect\bic strategy]
+  {Frequencies of models selected by \bic (\%) for 2,000 \pet compartmental
+  model data sets simulated from the three-compartments model}
   \label{tab:pet bic}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
