--- a/tab/pet-informative.tex
+++ b/tab/pet-informative.tex
@@ -1,11 +1,11 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption
-  [\protect\pet compartmental model selection using the Bayes factor
-  (informative priors)]
+  [Model selection results for the \protect\pet compartmental model using the 
+  Bayes factor (informative priors)]
   {Frequencies of models selected by the Bayes factor (informative priors)
-    (\%) for the 2,000 \pet compartmental model data sets simulated simulated
-    from a three-compartments model}
+    (\%) for 2,000 \pet compartmental model data sets simulated
+    from the three-compartments model}
   \label{tab:pet informative}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
