--- a/tab/pet-py.tex
+++ b/tab/pet-py.tex
@@ -1,7 +1,6 @@
-\thispagestyle{empty}
 \newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption[\protect\pet compartmental model marginal likelihood estimates]
   {Marginal likelihood estimates of two components \pet model.}
   \label{tab:pet-py}
