--- a/tab/pet-vague.tex
+++ b/tab/pet-vague.tex
@@ -1,10 +1,10 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \caption
-  [\protect\pet compartmental model selection using the Bayes factor (vague
-  priors)]
+  [Model selection results for the \protect\pet compartmental model using the
+  Bayes factor (vague priors)]
   {Frequencies of models selected by the Bayes factor (vague priors) (\%) for
-    the 2,000 \pet compartmental model data sets simulated simulated from a
+    2,000 \pet compartmental model data sets simulated from the
     three-compartments model}
   \label{tab:pet vague}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
