--- a/fig/cm3.tex
+++ b/fig/cm3.tex
@@ -1,4 +1,5 @@
 \begin{figure}[t]
+  \UseAltLinespread
   \centering
   \begin{tikzpicture}[scale=0.5]
     \draw (-10,4) -- (-10,5) -- (10,5) -- (10,-5) -- (-10,-5) -- (-10,0);
