--- a/fig/pet_mh_diag.tex
+++ b/fig/pet_mh_diag.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PET_MH_Diag}
   \caption[Trace and histogram of parameters in the random walk algorithm for
   the \protect\pet compartmental model (calibrated)]
