--- a/fig/pet_mh_path.tex
+++ b/fig/pet_mh_path.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PET_MH_Path.pdf}
   \caption[Traces of parameters in the random walk algorithm for the
   \protect\pet compartmental model (calibrated)]
