--- a/fig/pet_vd.tex
+++ b/fig/pet_vd.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PET_VD}
   \caption[Convergence diagnostics for the random walk algorithm for the
   \protect\pet compartmental model using averages]
