--- a/fig/vsmc_bench_ocl.tex
+++ b/fig/vsmc_bench_ocl.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]
-  \linespread{1.1}\selectfont
+  \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/bench-ocl-time-running}
   \includegraphics[width=\linewidth]{fig_src/bench-ocl-speedup-running}
   \caption[Performance of \protect\vsmc \protect\opencl implementations]
