--- a/tab/pet-bf-cost.tex
+++ b/tab/pet-bf-cost.tex
@@ -1,11 +1,7 @@
 \begin{table}[t]
-  \linespread{1.1}\selectfont
-  \caption[Computational cost of the Bayes factor estimates using adaptive
-  \protect\smc algorithms]
-  {The number of distributions used for the simulated \pet data set using the
-    \smc[2] algorithm. All four samplers are configured such that the standard
-    Bayes factor estimates ($\log B_{2,1}$) have a standard deviation of
-    approximately $0.27$.}
+  \UseAltLinespread
+  \caption{The number of distributions used for a simulated \protect\pet data
+  set using the \protect\smc[2] algorithm.}
   \label{tab:pet four sampler same iter}
   \begin{tabularx}{\linewidth}{lXX}
     \toprule
@@ -16,5 +12,11 @@
     Fixed annealing ($\alpha_k(t/T_k) = (t/T_k)^5$) & $200$ & $182$ \\
     \cess-based adaptive annealing & $175$ & $157$ \\
     \bottomrule
+    \multicolumn{3}{r}{%
+      \begin{minipage}{\linewidth-2em}\vskip1ex\sffamily
+        All four samplers are configured such that the standard Bayes factor
+        estimates ($\log B_{2,1}\pm\sd$), obtained from 100 simulations for
+        each sampler, have a standard deviation of approximately $0.27$.
+      \end{minipage}}
   \end{tabularx}
 \end{table}
