--- a/tab/pet-bf.tex
+++ b/tab/pet-bf.tex
@@ -1,9 +1,8 @@
-\thispagestyle{empty}
 \newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
 \begin{table}[t]
-  \linespread{1.1}\selectfont
-  \caption[\protect\pet compartmental model Bayes factor estimates]
-  {Bayes factor $B_{2,1}$ estimates of two components \pet model.} 
+  \UseAltLinespread
+  \caption[\protect\pet compartmental model the Bayes factor estimates]
+  {The Bayes factor estimates of two-compartments \pet model.} 
   \label{tab:pet-bf}
   \begin{tabu}{X[0.4l]X[0.4l]X[0.7c]X[0.8r]X[1r]X[0.8r]X[0.8r]}
       \toprule
@@ -12,7 +11,7 @@
       \multicolumn{3}{l}{Annealing scheme} & Prior (5) & Posterior (5) & \multicolumn{2}{c}{Adaptive} \\
       \cmidrule(lr){1-3}\cmidrule(lr){4-4}\cmidrule(lr){5-5}\cmidrule(lr){6-7}
       %
-      $T$    & $N$   & Algorithm   & \multicolumn{4}{c}{Bayes factor estimates ($\log B_{2,1}\pm\text{\sd}$)} \\ \midrule
+      $T$    & $N$   & Algorithm   & \multicolumn{4}{c}{Bayes factor estimates ($\log B_{2,1}\pm\sd$)} \\ \midrule
       $500$  & $30 $ & \pmcmc      & $1.7\pm0.62$ & $-70.9\pm525.79$ && \\
       $500$  & $192$ & \smc2-\ds & $\SubBest{1.6\pm0.27}$ & $\SubBest{1.3\pm1.13}$  & $\SubBest{1.6\pm0.20}$ & $\Best{1.6\pm0.15}$  \\
              &       & \smc2-\ps & $\SubBest{1.6\pm0.27}$ & $-3.9\pm30.02$  & $\SubBest{1.6\pm0.20}$ & $\Best{1.6\pm0.15}$  \\
