--- a/fig/pet_mo.tex
+++ b/fig/pet_mo.tex
@@ -1,6 +1,7 @@
 \begin{figure}[t]
   \UseAltLinespread
-  \includegraphics[width=\linewidth]{fig_src/PET_MO}
+  \centering
+  \includegraphics[width=0.95\linewidth]{fig_src/PET_MO}
   \caption[Model selection results for the \protect\pet compartmental model]
   {Model selection results for \pet model using real data set. From
     top to bottom: Model order selected by \aicc (see Section~\ref{sub:A
