--- a/tab/pet-bf-accuracy.tex
+++ b/tab/pet-bf-accuracy.tex
@@ -15,7 +15,7 @@
     \multicolumn{3}{r}{%
       \begin{minipage}{\linewidth-2em}\vskip1ex\sffamily
         All four samplers are configured such that about 200 distributions are
-        used. The estimates $\log B_{2,1}\pm\sd$) are obtained from 100
+        used. The estimates ($\log B_{2,1}\pm\sd$) are obtained from 100
         simulations for each sampler.
       \end{minipage}}
   \end{tabularx}
