--- a/tab/pet-bias.tex
+++ b/tab/pet-bias.tex
@@ -20,11 +20,11 @@
     \bottomrule
     \multicolumn{5}{r}{%
       \begin{minipage}{\linewidth-2em}\vskip1ex\sffamily
-        The estimator was approximated using samples from \smc[2] algorithm
-        with 1,000 particles and 20 iterations, with different numerical
-        integration strategies. Large sample result (see
-        Table~\ref{tab:pet-py}) shows that the accurate value is about
-        $-39.2$.
+        The estimator ($p(\data|\theta_k,\calM_k)\pm\sd$) was approximated
+        using samples from \smc[2] algorithm with 1,000 particles and 20
+        iterations, with different numerical integration strategies. Large
+        sample result (see Table~\ref{tab:pet-py}) shows that the accurate
+        value is about $-39.2$.
       \end{minipage}}
   \end{tabularx}
 \end{table}
