--- a/title.tex
+++ b/title.tex
@@ -7,6 +7,7 @@
 \centering
 
 \begingroup
+\vbox{}\vskip2\baselineskip
 \color{MRed}
 \allcapt\MakeTextUppercase{Bayesian Model Comparison}\par
 \allsmcp via
@@ -34,9 +35,6 @@ Doctor of Philosophy\par
 \begingroup
 The University of Warwick\par
 Department of Statistics\par\vskip2\baselineskip
-November 2013
+November 2013\vbox{}
 \endgroup
-
-\endgroup
-\vskip2\baselineskip
 \pagebreak
