--- a/fig/particle_iter_var.tex
+++ b/fig/particle_iter_var.tex
@@ -13,6 +13,6 @@
     indicated with different sizes of the dots, larger dots representing
     larger $T$ (and thus smaller $N$). It can be seen that for a particular
     value of $NT$, changing $T$ may change the variance considerably and
-    larger $T$ is preferred for most values of $NT$}
+    larger $T$ is preferred for most values of $NT$.}
   \label{fig:particle iter num}
 \end{figure}
