--- a/title.tex
+++ b/title.tex
@@ -37,4 +37,6 @@ The University of Warwick\par
 Department of Statistics\par\vskip2\baselineskip
 November 2013\vbox{}
 \endgroup
+
+\endgroup
 \pagebreak
