--- a/tab/gmm-pair.tex
+++ b/tab/gmm-pair.tex
@@ -3,7 +3,7 @@
   \caption
   [Gaussian mixture model the Bayes factor estimates]
   {Gaussian mixture model the Bayes factor estimates obtained via \smc[2],
-    \smc[3], \ais and the population \mcmc.}
+    \smc[3], \ais and population \mcmc.}
   \label{tab:gmm-pair}
   \begin{tabu}{X[2l]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]X[1.5c]}
     \toprule
