fix front matters

--- a/title.tex
+++ b/title.tex
@@ -23,7 +23,7 @@ Yan Zhou\par
 \begingroup
 \fontsize{12}{14}\selectfont
 A thesis submitted to the University of Warwick\par
-in partial fulfilment of the requirements for the degree of\par
+in partial fulfillment of the requirements for the degree of\par
 \endgroup
 
 \begingroup
