--- a/fig/pet_plot.tex
+++ b/fig/pet_plot.tex
@@ -1,13 +1,7 @@
 \begin{figure}[t]
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PETPlot-smc2-ps-bw}
-  \caption[Volume of distribution of real \protect\pet compartmental model
-  data]
-  {Estimates of $V_D$ from a single \pet scan as found using \smc[2].
-    The data shows that the volume of distribution exhibits substantial
-    spatial variation. Note that each pixel in the image represent an estimate
-    from an individual time series data set. There are approximately a quarter
-    of a million of them and each requires a Monte Carlo simulation to select
-    a model.}
+  \caption{Volume of distribution estimates of real \protect\pet
+   compartmental model data.}
   \label{fig:petplot}
 \end{figure}
