--- a/fig/cm3.tex
+++ b/fig/cm3.tex
@@ -24,6 +24,6 @@
     \draw (-10,6)     node {\footnotesize Three compartments};
   \end{tikzpicture}  
   \caption{Illustration of the three-compartments plasma input \protect\pet
-  model}
+  model.}
   \label{fig:cm3}
 \end{figure}
