--- a/fig/pet_plasma.tex
+++ b/fig/pet_plasma.tex
@@ -45,6 +45,6 @@
     \draw (3,17)  node {$K_1$};
     \draw (3,15)  node {$k_2$};
   \end{tikzpicture}
-  \caption{Illustration of the plasma input \protect\pet compartmental model}
+  \caption{Illustration of the plasma input \protect\pet compartmental model.}
   \label{fig:plasma}
 \end{figure}
