fig/tab caption

--- a/fig/cm3.tex
+++ b/fig/cm3.tex
@@ -23,7 +23,10 @@
     \draw (5,0)       node {\footnotesize Specifically bound};
     \draw (-10,6)     node {\footnotesize Three compartments};
   \end{tikzpicture}  
-  \caption{Illustration of the three-compartments plasma input \protect\pet
+  \caption
+  [Illustration of the three-compartments plasma input \protect\pet
+    model.]
+  {Illustration of the three-compartments plasma input \protect\pet
   model.}
   \label{fig:cm3}
 \end{figure}
