--- a/fig/fixed_proposal.tex
+++ b/fig/fixed_proposal.tex
@@ -4,6 +4,6 @@
   \caption[Acceptance rates of non-adaptive \protect\smc algorithms]
   {Average random walk acceptance rates for the two-compartments \pet model
     with data sets in Figure~\ref{fig:typical real pet} using fixed proposal
-    scales}
+    scales.}
   \label{fig:pet fixed proposal}
 \end{figure}
