--- a/fig/mcmc_iter_var.tex
+++ b/fig/mcmc_iter_var.tex
@@ -6,6 +6,6 @@
   {Variance of the path sampling estimates and total number of samples
     using the \smc[2] algorithm. Both samplers use 1,000 particles but with
     different number of distributions and passes of \mcmc moves at each
-    iteration}
+    iteration.}
   \label{fig:fast mcmc iter}
 \end{figure}
