--- a/fig/pet_plot.tex
+++ b/fig/pet_plot.tex
@@ -1,7 +1,10 @@
 \begin{figure}[t]
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/PETPlot-smc2-ps-bw}
-  \caption{Volume of distribution estimates of real \protect\pet
+  \caption
+  [Volume of distribution estimates of real \protect\pet
+   compartmental model data]
+  {Volume of distribution estimates of real \protect\pet
    compartmental model data.}
   \label{fig:petplot}
 \end{figure}
