--- a/fig/typical_pet.tex
+++ b/fig/typical_pet.tex
@@ -1,6 +1,8 @@
 \begin{figure}[t]
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/Typical_PET}
-  \caption{Typical real \protect\pet data}
+  \caption
+  [Typical real \protect\pet data]
+  {Typical real \protect\pet data.}
   \label{fig:typical real pet}
 \end{figure}
