--- a/tab/pet-aic.tex
+++ b/tab/pet-aic.tex
@@ -4,7 +4,7 @@
   [Model selection results for the \protect\pet compartmental model using
   the \protect\aicc strategy]
   {Frequencies of models selected by \aicc (\%) for 2,000 \pet compartmental
-  model data sets simulated from the three-compartments model}
+  model data sets simulated from the three-compartments model.}
   \label{tab:pet aicc}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
