--- a/tab/pet-bf-cost.tex
+++ b/tab/pet-bf-cost.tex
@@ -1,6 +1,9 @@
 \begin{table}[t]
   \UseAltLinespread
-  \caption{The number of distributions used for a simulated \protect\pet data
+  \caption
+  [The number of distributions used for a simulated \protect\pet data
+    set using the \protect\smc[2] algorithm]
+  {The number of distributions used for a simulated \protect\pet data
   set using the \protect\smc[2] algorithm.}
   \label{tab:pet four sampler same iter}
   \begin{tabularx}{\linewidth}{lXX}
