--- a/tab/pet-bias.tex
+++ b/tab/pet-bias.tex
@@ -1,6 +1,9 @@
 \begin{table}[t]
   \UseAltLinespread
-  \caption{Path sampling marginal likelihood estimates of the two-compartments
+  \caption
+  [Path sampling marginal likelihood estimates of the two-compartments
+    \protect\pet model for a simulated data set]
+  {Path sampling marginal likelihood estimates of the two-compartments
     \protect\pet model for a simulated data set.}
   \label{tab:pet-bias}
   \begin{tabularx}{\linewidth}{lXXXX}
