--- a/tab/pet-informative.tex
+++ b/tab/pet-informative.tex
@@ -5,7 +5,7 @@
   Bayes factor (informative priors)]
   {Frequencies of models selected by the Bayes factor (informative priors)
     (\%) for 2,000 \pet compartmental model data sets simulated
-    from the three-compartments model}
+    from the three-compartments model.}
   \label{tab:pet informative}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
