--- a/tab/bayes-factor-scale.tex
+++ b/tab/bayes-factor-scale.tex
@@ -1,6 +1,8 @@
 \begin{table}[t]
   \UseAltLinespread
-  \caption{Jeffreys' intepretation of the Bayes factor}
+  \caption
+  [Jeffreys' intepretation of the Bayes factor]
+  {Jeffreys' intepretation of the Bayes factor.}
   \label{tab:bayes factor log10 scale}
   \begin{tabu}{X[1l]X[1l]X[5l]}
     \toprule
