--- a/tab/pet-bf-accuracy.tex
+++ b/tab/pet-bf-accuracy.tex
@@ -1,7 +1,10 @@
 \begin{table}[t]
   \UseAltLinespread
-  \caption{The standard Bayes factor estimates for a
-    simulated \protect\pet data set using the \protect\smc[2] algorithm. }
+  \caption
+  [The standard Bayes factor estimates for a simulated \protect\pet data set
+using the \protect\smc[2] algorithm]
+  {The standard Bayes factor estimates for a simulated \protect\pet data set
+using the \protect\smc[2] algorithm.}
   \label{tab:pet four sampler same dist}
   \begin{tabularx}{\linewidth}{lXX}
     \toprule
