--- a/fig/vsmc_bench_ocl.tex
+++ b/fig/vsmc_bench_ocl.tex
@@ -1,4 +1,4 @@
-\begin{figure}[t]
+\begin{figure}
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/bench-ocl-time-running}
   \includegraphics[width=\linewidth]{fig_src/bench-ocl-speedup-running}
