--- a/fig/vsmc_bench_smp.tex
+++ b/fig/vsmc_bench_smp.tex
@@ -1,4 +1,4 @@
-\begin{figure}[t]
+\begin{figure}
   \UseAltLinespread
   \includegraphics[width=\linewidth]{fig_src/bench-smp-time-running}
   \includegraphics[width=\linewidth]{fig_src/bench-smp-speedup-running}
