--- a/tab/pet-bf-accuracy.tex
+++ b/tab/pet-bf-accuracy.tex
@@ -2,7 +2,7 @@
   \UseAltLinespread
   \caption
   [The standard Bayes factor estimates for a simulated \protect\pet data set
-using the \protect\smc[2] algorithm]
+using adaptive and non-adaptive \protect\smc algorithms]
   {The standard Bayes factor estimates for a simulated \protect\pet data set
 using the \protect\smc[2] algorithm.}
   \label{tab:pet four sampler same dist}
