--- a/tab/pet-bf-cost.tex
+++ b/tab/pet-bf-cost.tex
@@ -2,7 +2,7 @@
   \UseAltLinespread
   \caption
   [The number of distributions used for a simulated \protect\pet data
-    set using the \protect\smc[2] algorithm]
+    set using adaptive and non-adaptive \protect\smc algorithms]
   {The number of distributions used for a simulated \protect\pet data
   set using the \protect\smc[2] algorithm.}
   \label{tab:pet four sampler same iter}
