--- a/tab/pet-bf.tex
+++ b/tab/pet-bf.tex
@@ -1,5 +1,5 @@
 \newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
-\begin{table}[t]
+\begin{table}
   \UseAltLinespread
   \caption[\protect\pet compartmental model the Bayes factor estimates]
   {The Bayes factor estimates of two-compartments \pet model.} 
