--- a/tab/node-s.tex
+++ b/tab/node-s.tex
@@ -1,5 +1,5 @@
 \newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
-\begin{table}[t]
+\begin{table}
   \UseAltLinespread
   \caption
   [Nonlinear \protect\ode model marginal likelihood and the Bayes factor
