--- a/alg/smc3.tex
+++ b/alg/smc3.tex
@@ -9,7 +9,7 @@
   \STATE\STATESKIP Set $k\leftarrow k + 1$, $t\leftarrow0$.
   \STATE\STATESKIP Let
   $\{W_0^{(k,i)},X_0^{(k,i)}\}_{i=1}^N$ where $X_0^{(k,i)} =
-  (\theta_0^{(k,i),\calM_0^{(k,i)}})$ denote the current samples.
+  (\theta_0^{(k,i)},\calM_0^{(k,i)})$ denote the current samples.
   \STATE\STATESKIP Apply resampling if necessary.
 
   \STATE\STATESKIP \emph{Iteration:} Set $t\leftarrow t + 1$.
