--- a/tab/node-c.tex
+++ b/tab/node-c.tex
@@ -1,4 +1,4 @@
-\newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
+%\newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
 \begin{table}
   \UseAltLinespread
   \caption
