--- a/tab/pet-bias.tex
+++ b/tab/pet-bias.tex
@@ -1,10 +1,8 @@
 \begin{table}[t]
   \UseAltLinespread
   \caption
-  [Path sampling marginal likelihood estimates of the two-compartments
-    \protect\pet model for a simulated data set]
-  {Path sampling marginal likelihood estimates of the two-compartments
-    \protect\pet model for a simulated data set.}
+  [Path sampling marginal likelihood estimates bias reduction for a simulated \prtect\pet data set]
+  {Path sampling marginal likelihood estimates bias reduction for a simulated \prtect\pet data set.}
   \label{tab:pet-bias}
   \begin{tabularx}{\linewidth}{lXXXX}
     \toprule
