--- a/fig/mcmc_iter_var.tex
+++ b/fig/mcmc_iter_var.tex
@@ -5,7 +5,7 @@
   using \protect\smc algorithm]
   {Variance of the path sampling estimates and total number of samples
     using the \smc[2] algorithm. Both samplers use 1,000 particles but with
-    different number of distributions and passes of \mcmc moves at each
-    iteration.}
+    different number of distributions $T$ and passes of \mcmc moves at each
+    iteration $K$. The samplers are configured such that the value of $TK$ is the same for both samplers, and therefore they generate the same total number of samples.}
   \label{fig:fast mcmc iter}
 \end{figure}
