new document class

--- a/thesis.tex
+++ b/thesis.tex
@@ -3,9 +3,10 @@
 linespread=1.414, lines=30, oneside, onesideheader,
 bib, bibintoc, biblatexstyle=numeric,
 mintcode, minted=cache
-]{mthesis}
+]{mbook}
 \usepackage{pdfpages}
 \ExecuteBibliographyOptions{url=true}
+\ExecuteBibliographyOptions{doi=false}
 
 \input{macros}
 
