--- a/cover.tex
+++ b/cover.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, fontset=Arno, colorful = false]{mthesis}
+\documentclass[11pt, fontset=Arno, colorful = false]{mbook}
 
 \title{Bayesian Model Comparison \\ via Sequential Monte Carlo}
 \author{Yan Zhou}
