--- a/layout.tex
+++ b/layout.tex
@@ -1,6 +1,6 @@
 \documentclass[
 11pt, fontset=Minion, linespread=1.414, lines=30, oneside, onesideheader,
-]{mthesis}
+]{mbook}
 \usepackage{layouts}
 
 \begin{document}
