--- a/table.tex
+++ b/table.tex
@@ -2,7 +2,7 @@
 11pt, fontset=Minion, toclevel=3, colorfullink=false,
 linespread=1.414, lines=30, oneside, onesideheader,
 mintcode, minted=cache, showoverfull
-]{mthesis}
+]{mbook}
 \input{macros}
 
 \begin{document}
